feat:add scss and bootstrap

--- a/src/style/_library.scss
+++ b/src/style/_library.scss
@@ -1,11 +1,4 @@
-$baseFamily:Manrope,sans-serif;
-$textColor : #334357;
-
-@mixin baseText($weight){
-  font: {
-    family:$baseFamily;
-    weight:$weight;
-  }
-  color:$textColor;
+@mixin empty($empty){
+  color:$empty;
 }
 
