--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500&display=swap');
 *{
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
   font-family: Manrope,sans-serif;
 }
