feat:footer layout

--- a/src/Components/footer/_variables.scss
+++ b/src/Components/footer/_variables.scss
@@ -1,8 +1,9 @@
 @mixin fullBlock() {
   legend {
     margin-top: 25px;
+    color: #5e5e71;
    font: {
-     family: Manrope;
+     family: Manrope,sans-serif;
      weight: 600;
      size: 16px;
    }
