--- a/src/Components/bottomCompanies/bottom.module.scss
+++ b/src/Components/bottomCompanies/bottom.module.scss
@@ -12,6 +12,10 @@
     align-items: center;
     justify-content: space-evenly;
     margin: 0 auto;
+    img{
+      width: 200px;
+      padding: 0 20px;
+    }
     @include breackpoint(lg){
       width: 50%;
       flex-wrap: wrap;
