--- a/src/Components/benefits/_variables.scss
+++ b/src/Components/benefits/_variables.scss
@@ -33,6 +33,9 @@
   @include breackpoint(sm){
     display: grid;
     grid-template-columns: 1fr;
+   margin-left:auto;
+   margin-right: auto;
+   padding: 0;
   }
   li{
     @include breackpoint(lg){
