--- a/src/Components/benefits/_variables.scss
+++ b/src/Components/benefits/_variables.scss
@@ -12,40 +12,45 @@
   }
 
   p {
-    @include breackpoint(lg){
+    @include breackpoint(lg) {
       max-width: 500px;
     }
+
     display: block;
-      max-width: 800px;
-      margin: 30px auto;
-      font-size: 18px;
-      line-height: 1.7em;
-      color: #333;
+    max-width: 800px;
+    margin: 30px auto;
+    font-size: 18px;
+    line-height: 1.7em;
+    color: #333;
   }
-   
+
 }
 
 @mixin cards {
-  @include breackpoint(lg){
-    margin: 15px 0;
-    grid-template-columns: 1fr 1fr; 
+  @include breackpoint(lg) {
+    display:grid;
+    grid-template-columns: 1fr 1fr;
   }
-  @include breackpoint(sm){
+
+  @include breackpoint(sm) {
     display: grid;
     grid-template-columns: 1fr;
-   margin-left:auto;
-   margin-right: auto;
-   padding: 0;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
   }
-  li{
-    @include breackpoint(lg){
-    width: 450px;
-    margin: 0 auto;
+
+  li {
+    @include breackpoint(lg) {
+      width: 250px;
+      margin: 0 auto;
     }
-    @include breackpoint(sm){
+
+    @include breackpoint(sm) {
       width: 320px;
-     margin: 0 auto;
-      }
+      margin: 0 auto;
+    }
+
     display: flex;
     font-size: 18px;
     color: #333;
@@ -54,12 +59,14 @@
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
-    div{
+
+    div {
       height: 150px;
       display: flex;
       align-items: center;
       justify-content: center;
-      img{
+
+      img {
         margin-top: 15px;
         margin-bottom: 21px;
         display: inline-block;
@@ -69,17 +76,28 @@
   }
 }
 
-@mixin breackpoint($point){
-  @if $point == lg{
-    @media (max-width:992px) { @content; }
+@mixin breackpoint($point) {
+  @if $point==lg {
+    @media (max-width:992px) {
+      @content;
+    }
   }
-  @else if $point == md{
-    @media (max-width:768px) { @content; }
+
+  @else if $point==md {
+    @media (max-width:768px) {
+      @content;
+    }
   }
-  @else if $point == sm {
-    @media (max-width:576px) { @content; }
+
+  @else if $point==sm {
+    @media (max-width:576px) {
+      @content;
+    }
   }
-  @else if $point == xs{
-    @media (max-width:320px) { @content; }
+
+  @else if $point==xs {
+    @media (max-width:320px) {
+      @content;
+    }
   }
 }
