--- a/src/Components/benefits/benefits.module.scss
+++ b/src/Components/benefits/benefits.module.scss
@@ -167,6 +167,9 @@
   display: flex;
   justify-content: center;
   padding: 50px;
+  @include breackpoint(lg){
+    padding: 0;
+  }
   @include breackpoint(sm){
     padding: 0;
   }
@@ -211,6 +214,10 @@
 
 .cards {
   ul {
+    @include breackpoint(lg){
+      padding: 0;
+      margin: 0;
+    }
     display: flex;
     grid-gap: 20px;
     gap: 20px;
