--- a/src/components/companies/Companies.module.scss
+++ b/src/components/companies/Companies.module.scss
@@ -16,6 +16,10 @@
     .container h2{
         font-size: 20px;
     }
+    .icons {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
 .global{
     background-color: #f1f1f1;
@@ -29,7 +33,8 @@
     justify-content: center;
 }
 .icons img{
-    width: 90px;
+    max-width: 120px;
+    height: 35px;
     margin-left: 60px;
     text-align: center;
     margin-top: 35px;
