--- a/src/Components/benefits/benefits.module.scss
+++ b/src/Components/benefits/benefits.module.scss
@@ -12,6 +12,7 @@
   @include breackpoint(lg) {
     width: 100%;
   }
+
   @include breackpoint(sm) {
     width: 100%;
     margin: 45px auto;
@@ -34,21 +35,26 @@
 
   .left {
     width: 50%;
-    @include breackpoint(lg){
+
+    @include breackpoint(lg) {
       width: 100%;
       display: block;
     }
+
     img {
       width: 100%;
-      @include breackpoint(lg){
+
+      @include breackpoint(lg) {
         width: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
       }
-      @include breackpoint(sm){
-       width: 100%;
+
+      @include breackpoint(sm) {
+        width: 100%;
       }
+
       margin-bottom: 20px;
       border-radius: 3px;
       box-shadow: 0 4px 20px 0 rgb(0 0 0 / 10%);
@@ -57,10 +63,12 @@
 
   .right {
     width: 50%;
-    @include breackpoint(lg){
+
+    @include breackpoint(lg) {
       width: 100%;
       margin: 0 auto;
     }
+
     p {
       display: block;
       max-width: 800px;
@@ -104,7 +112,7 @@
   @include breackpoint(lg) {
     grid-template-columns: 250px 250px;
     gap: 15px 15px;
-    justify-content:center;
+    justify-content: center;
 
     .card {
       padding: 0;
@@ -123,6 +131,7 @@
     background: #fff;
     box-shadow: 0 2px 8px rgb(62 62 82 / 10%);
     gap: 32px;
+
     header {
       display: flex;
       align-items: center;
@@ -166,17 +175,18 @@
 .clickhere {
   display: flex;
   justify-content: center;
-  padding: 50px;
-  @include breackpoint(lg){
-    padding: 0;
-  }
-  @include breackpoint(sm){
-    padding: 0;
-  }
-  p {
+  span {
     font-size: 18px;
     line-height: 1.7em;
     color: #333;
+  }
+
+  @include breackpoint(lg) {
+    padding: 0;
+  }
+
+  @include breackpoint(sm) {
+    padding: 0;
   }
 
   a {
@@ -199,25 +209,28 @@
   }
 
   @include title(36px);
-  @include breackpoint(sm){
-   width: 100%;
-   padding: 10px;
+
+  @include breackpoint(sm) {
+    width: 100%;
+    padding: 10px;
   }
 }
 
 .whatBenefits {
   @include title(36px);
-  @include breackpoint(sm){
+
+  @include breackpoint(sm) {
     padding: 15px;
   }
 }
 
 .cards {
   ul {
-    @include breackpoint(lg){
+    @include breackpoint(lg) {
       padding: 0;
       margin: 0;
     }
+
     display: flex;
     grid-gap: 20px;
     gap: 20px;
@@ -232,7 +245,8 @@
 .receive {
   padding: 70px 0;
   @include title(40px);
-  @include breackpoint(lg){
+
+  @include breackpoint(lg) {
     @include title(22px)
   }
 }
