--- a/src/Components/benefits/benefits.module.scss
+++ b/src/Components/benefits/benefits.module.scss
@@ -167,18 +167,16 @@
   display: flex;
   justify-content: center;
   padding: 50px;
+  text-align: center;
   @include breackpoint(lg){
     padding: 0;
+    margin-bottom: 25px;
   }
   @include breackpoint(sm){
     padding: 0;
+    margin-bottom: 25px;
   }
-  p {
-    font-size: 18px;
-    line-height: 1.7em;
-    color: #333;
-  }
-
+ 
   a {
     font-size: 18px;
     line-height: 1.7em;
