--- a/src/components/companies/Companies.module.scss
+++ b/src/components/companies/Companies.module.scss
@@ -30,6 +30,7 @@
 }
 .icons{
     display: flex;
+    align-items: center;
     justify-content: center;
 }
 .icons img{
@@ -39,7 +40,9 @@
     text-align: center;
     margin-top: 35px;
 }
-h2{
+div h2{
     text-align: center;
-    font-size: 25px;
+    font-size: 22px;
+    font-weight: bold;
+    color: #334357;
 }
