--- a/src/components/jumbotron/Jumbotron.module.scss
+++ b/src/components/jumbotron/Jumbotron.module.scss
@@ -1,97 +1,135 @@
-@media (max-width: 1200px){
-    .global{
-        max-width:970px;
-    }
-    .global .right img{
-        width: 400px;
-    }
-    .global .left .getStartedBtn{
-        padding: 10px 25px;
-        font-size: 18px; 
-        background-color: #ecc051;   
-    }
-    .left .leftText{
-        font-size: 35px;
-        font-weight: 500;
-    }
-    .left p{
-        margin-top: 15px;
-        margin-bottom: 15px;
-        color: black;
-    }    
-}
-@media (max-width: 992px){
-    .global{
-        max-width:750px;
-    }
-    .global .right img{
-        width: 400px;
-    }
-    .global .left .getStartedBtn{
-        padding: 10px 15px;
-        background-color: #f0c351;  
-        font-size: 14px;  
-    }
-    .left .leftText{
-        font-size: 32px;
-        font-weight: 600;
-    }
-    .left p{
-        margin-top: 15px;
-        margin-bottom: 10px;
-        color: black;
-        font-size: 18px;
+@media (max-width: 1200px) {
+    .global {
+        max-width: 970px;
+
+        .right img {
+            width: 400px;
+        }
+
+        .left {
+            .getStartedBtn {
+                padding: 10px 25px;
+                font-size: 18px;
+                background-color: #ecc051;
+            }
+
+            p {
+                margin-top: 15px;
+                margin-bottom: 15px;
+                color: black;
+            }
+
+            div {
+                p {
+                    font-size: 18px;
+                }
+                .textFire {
+                    h1 {
+                        font-size: 34px;
+                        font-weight: 600;
+                    }
+                }
+            }
+        }
     }
 }
-@media(max-width: 768px){
-    .global{
+
+@media (max-width: 992px) {
+    .global {
+        max-width: 750px;
+
+        .right {
+            img {
+                width: 400px;
+            }
+        }
+
+        .left {
+            .getStartedBtn {
+                padding: 10px 15px;
+                background-color: #f0c351;
+                font-size: 14px;
+            }
+
+            div {
+                p {
+                    font-size: 16px;
+                }
+
+                .textFire {
+                    h1 {
+                        font-size: 28px;
+                        font-weight: 600;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media(max-width: 768px) {
+    .global {
         max-width: 600px;
+
+        .right {
+            img {
+                margin-top: 55px;
+                width: 250px;
+            }
+        }
+
+        .left {
+            .getStartedBtn {
+                padding: 8px 10px;
+                background-color: #f0c351;
+                font-size: 12px;
+            }
+
+            div {
+                p {
+                    font-size: 12px;
+                }
+                .textFire {
+                    h1 {
+                        font-size: 22px;
+                        font-weight: bold;
+                    }
+                }
+            }
+        }
     }
-    .global .right img{
-        margin-top: 55px;
-        width: 250px;
-    }
-    .global .left .getStartedBtn{
-        padding: 8px 10px;
-        background-color: #f0c351;  
-        font-size: 12px;  
-    }
-    .left .leftText{
-        font-size: 22px;
-        font-weight: 400;
-    }
-    .left p{
-        margin-top: 15px;
-        margin-bottom: 10px;
-        color: black;
-        font-size: 14px;
-    }
-    
 }
-.global{
+
+.global {
     height: 85vh;
     display: flex;
 }
-.right img{
+
+.right img {
     width: 600px;
+    padding-right: 35px;
 }
-.left{
-    width: 44%;
+
+.left {
+    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
 }
-.right{
-    width: 55%;
+
+.right {
+    width: 49%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.left div{
-    width: 55%;
+
+.left div {
+    width: 75%;
 }
-.getStartedBtn{
+
+.getStartedBtn {
     background-color: #ffb800;
     box-shadow: 0 4px 6px rgb(0 0 0 / 10%);
     border-radius: 10px;
@@ -101,23 +139,27 @@
     padding: 16px 40px;
     font-weight: 700;
     border: 1px solid transparent;
-    font-family: Manrope,sans-serif;
+    font-family: Manrope, sans-serif;
 }
-div .leftText{
+
+.left p {
     color: #334357;
-    font-family: Manrope,sans-serif;
-    font-size: 45px;
-    font-weight: 700;
+    margin-top: 20px;
+    margin-bottom: 25px;
+    font-size: 18px;
 }
-div p{
-    color: #334357;
-    margin-top: 35px;
-    margin-bottom: 35px;
-}
-.fire{
+
+.fire {
     width: 40px;
 }
-.textFire{
+
+.textFire {
     display: flex;
     align-items: flex-end;
+
+    h1 {
+        font-size: 34px;
+        font-weight: 600;
+        color: #334357;
+    }
 }
