--- a/src/pages/AboutPage/aboutPage.module.scss
+++ b/src/pages/AboutPage/aboutPage.module.scss
@@ -32,6 +32,14 @@
 .devsCard{
   text-align: center;
   img{
+    @include breackpoint(lg){
+      width: 100px;
+      height: 100px;
+    }
+    @include breackpoint(sm){
+      width: 150px;
+      height: 150px;
+    }
     width: 150px;
     height: 150px;
   }
