--- a/src/Components/registerPage/RegisterPage.module.scss
+++ b/src/Components/registerPage/RegisterPage.module.scss
@@ -1,4 +1,44 @@
+@media (max-width: 768px) {
+    .main {
+        font-size: 14px;
+        max-width: 330px;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 576px) {
+    .main {
+        font-size: 14px;
+        max-width: 300px;
+        margin: 0 auto;
+        p{
+            font-size: 10px;
+        }
+        .checkbox{
+            span{
+                font-size: 12px;
+            }
+        }
+        .createAc{
+            font-size: 12px;
+        }
+        .signInBtn{
+            padding: 0 10px;
+            span{
+                font-size: 12px;
+            }
+        }
+        .spanAccount{
+            font-size: 12px;
+            a{
+                font-size: 12px;
+            }
+        }
+    }
+
+}
 .global {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,24 +48,59 @@
 }
 
 .main {
-    width: 400px;
+    width: 370px;
     background-color: white;
-    height: 100vh;
-    padding: 20px 20px;
-    margin-top: 20px;
-    
-    h1{
+    height: 116vh;
+    padding: 20px 25px;
+    margin: 40px 0;
+    border-radius: 2px;
+    box-shadow: 0 2px 8px 0 rgb(62 62 82 / 10%);
+
+    h5 {
         text-align: center;
+        font-weight: bold;
     }
 
     input {
-        width: 350px;
-        padding: 8px 5px;
+        width: 100%;
+        padding: 9px 5px;
         border: 1px solid #f1f2f5;
-        color: #555;
         margin-bottom: 10px;
+        outline: none;
+        border-radius: 3px;
     }
+
+    input:hover {
+        border: 1px solid #8c8c9e;
+    }
+
     label {
+        color: #8c8c9e;
+        margin-top: 7px;
+        margin-bottom: 7px;
+    }
+
+    p {
+        font-size: 12px;
+        color: #3e3e52;
+    }
+
+    .spanAccount {
+        color: #5e5e71;
+        font-weight: 600;
+        font-size: 15px;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+
+        a {
+            text-decoration: none;
+            margin-left: 5px;
+        }
+    }
+
+    ::placeholder {
+        padding-left: 6px;
         color: #8c8c9e;
     }
 }
@@ -35,21 +110,69 @@
     background-color: #145cf2;
     color: white;
     border: none;
-    padding: 6px 15px;
+    padding: 7px 15px;
     margin-bottom: 5px;
     font-size: 16px;
+    border-radius: 3px;
+    cursor: pointer;
 }
-.signIn{
+
+.createAc:hover {
+    background-color: #00308f;
+}
+
+.signInBtn {
     width: 100%;
-    border: 1px solid #8c8c9e ;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #dce3f1;
+    border-radius: 3px;
+    margin-top: 8px;
     background-color: white;
-    padding: 6px 15px;
+    padding: 0 15px;
 
+    img {
+        width: 22px;
+        height: 22px;
+    }
 
-}
-.checkbox{
-    input{
-        width: fit-content;
+    span {
+        border: none;
+        padding: 6px 15px;
+        cursor: pointer;
+        color: #5e5e71;
+        font-size: 14px;
     }
 }
 
+.signInBtn:hover {
+    background-color: #dce3f1;
+
+    span:hover {
+        background-color: #dce3f1;
+    }
+}
+
+.checkbox {
+    input {
+        width: fit-content;
+        margin-right: 5px;
+        border: 1px solid #d6d6d6;
+    }
+
+    span {
+        color: #3e3e52;
+        font-size: 15px;
+
+        a {
+            text-decoration: none;
+        }
+    }
+}
+
+.easy_retro {
+    width: 180px;
+    height: 40px;
+}
