--- a/src/pages/registerPage/RegisterPage.module.scss
+++ b/src/pages/registerPage/RegisterPage.module.scss
@@ -77,8 +77,11 @@
 
     label {
         color: #8c8c9e;
-        margin-top: 7px;
-        margin-bottom: 7px;
+        margin: 3px 0 0 0;
+        width: 100%;
+        input{
+            margin-top: 5px;
+        }
     }
 
     p {
