feat: pricing layout

--- a/src/pages/PricingPage/pricingPage.module.scss
+++ b/src/pages/PricingPage/pricingPage.module.scss
@@ -145,6 +145,11 @@
       width: 220px;
       border-right: #094ddf 1px solid;
     }
+    .activeSeven{
+      height: 103px;
+      background-color: #145cf2;
+      border-right: #094ddf 1px solid;
+    }
 
     .first {
       background-color: #145cf2;
@@ -194,8 +199,7 @@
 
     .seventh {
       // max-height: 124px;
-      // min-height: 103px;
-      height: 124px;
+      height: 103px;
       background-color: #145cf2;
       border-right: #094ddf 1px solid;
     }
