--- a/src/pages/PricingPage/pricingPage.module.scss
+++ b/src/pages/PricingPage/pricingPage.module.scss
@@ -120,8 +120,11 @@
   }
 
   .table {
+    background-color: #145cf2;
+
     .tableHeader {
       padding-bottom: 16px;
+      background: white;
     }
 
     .startBtn {
