--- a/src/pages/PricingPage/pricingPage.module.scss
+++ b/src/pages/PricingPage/pricingPage.module.scss
@@ -5,9 +5,9 @@
   position: absolute;
   z-index: -1;
   width:100%;
-  height: 420px;
+  height: 415px;
   @include breackpoint(lg){
-    height: 430px;
+    height: 425px;
   }
   @include breackpoint(sm){
     height: 445px;
@@ -31,10 +31,8 @@
   display: flex;
   align-items: center;
   margin: 0 auto;
-  justify-content: space-evenly;
-  width: 100%;
-
-
+  justify-content: space-between;
+  width: 96%;
   h1 {
     color: #3e5250;
     font-family: Manrope, sans-serif;
@@ -42,7 +40,6 @@
     font-size: 20px;
     line-height: 24px;
     margin: 0;
-    margin-right: 16px;
   }
 
   @include breackpoint(lg) {
@@ -50,7 +47,6 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-
     h1 {
       margin: 0;
       padding-bottom: 5px;
