--- a/src/pages/PricingPage/pricingPage.module.scss
+++ b/src/pages/PricingPage/pricingPage.module.scss
@@ -1,24 +1,16 @@
 @import "../../Components//globalVariables.scss";
 
-.backColor {
-  background: #dbfcffd6;
-  position: absolute;
-  z-index: -1;
-  width:100%;
-  height: 415px;
-  @include breackpoint(lg){
-    height: 425px;
-  }
-  @include breackpoint(sm){
-    height: 445px;
-  }
-}
 
+
+.wrapper{
+  overflow-x:hidden ;
+  position: relative;
+}
 .background {
   background: #dbfcffe2;
   position: absolute;
   z-index: -1;
-  width: 100%;
+  width: 150%;
   height: 670px;
   top: -200px;
   transform: rotate(-5deg);
