fix:pricing page and fix all issues

--- a/src/pages/PricingPage/pricingPage.module.scss
+++ b/src/pages/PricingPage/pricingPage.module.scss
@@ -115,7 +115,7 @@
   @include breackpoint(lg) {
     overflow-x: auto;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
 
     .table {
       .seventh {
