--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,50 +1,68 @@
-// .container{
-//   width: 1200px;
-//   display: flex;
-//   margin-top: 20px;
-//   justify-content: space-between;
-//   .about{
-//     display: flex;
-//     justify-content: space-between;
-
-//   }
-//   .img{
-//     img{
-//       width: 150px;
-    
-//     }
-//   }
-// }
-* {
-  font-family: "Raleway";
-  box-sizing: border-box;
-}
 
 .top_nav {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  // background-color: #00BAF0;
-  // background: linear-gradient(to left, #f46b45, #eea849);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: rgb(0, 0, 0);
-  height: 50px;
-  padding: 1em;
+  height: 10vh;
 }
-
-.menu {
-  display: flex;
-  flex-direction: row;
-  list-style-type: none;
-  margin: 0;
-  padding: 0 ;
- 
-}
-
-.menu > li {
-  margin: 0 1rem;
+.wrapper{
   overflow: hidden;
+}
+.right{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 40%;
+  &.active{
+    width: 40%;
+  }
+}
+.select{
+  text-transform: uppercase;
+}
+.nav{
+  display: flex;
+  grid-gap: 15px;
+  height: 100%;
+  align-items: center;
+}
+.modal {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 0;
+  opacity: 0;
+  transition: .3s;
+  justify-content: space-evenly;
+  position: absolute;
+  width: 100%;
+  box-shadow: 0px 10px 15px -12px black;
+  a{
+    text-decoration: none;
+    color: black;
+  }
+}
+
+.menu{
+  display: flex;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  justify-content: space-between;
+}
+.menu a {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  color: black;
+  text-decoration: none;
+}
+
+.menu > a {
+  overflow: hidden;
+  height: fit-content;
 }
 
 .menu_button_container {
@@ -83,66 +101,117 @@
   margin-top: 8px;
 }
 
-#menu_toggle:checked + .menu_button_container .menu_button::before {
+.menu_button_container.active .menu_button::before {
   margin-top: 0px;
   transform: rotate(405deg);
 }
 
-#menu_toggle:checked + .menu_button_container .menu_button {
+.menu_button_container.active .menu_button {
   background: rgba(255, 255, 255, 0);
 }
 
-#menu_toggle:checked + .menu_button_container .menu_button::after {
+.menu_button_container.active .menu_button::after {
   margin-top: 0px;
   transform: rotate(-405deg);
 }
 
-@media (max-width: 700px) {
-  .menu_button_container {
-    display: flex;
-    padding-left: 230px;
+@media (max-width: 992px) {
+ .right{
+  width: 55%;
+  &.active{
+    width: 65%;
   }
+ }
+  
+}
 
-  .menu {
-    position: absolute;
-    top: 0;
-    margin-top: 50px;
-    left: 0;
-    flex-direction: column;
-    width: 100%;
-    justify-content: center;
+@media (max-width: 768px) {
+  .menu{
+    font-size: x-small;
+  }  
+  .menu > a{
+    display: flex;
     align-items: center;
   }
+  .right{
+    width: 50%;
+    &.active{
+      width: 60%;
+    }
+  }
+ }
 
-  #menu_toggle ~ .menu li {
-    height: 0;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+ @media (max-width: 576px) {
+    .menu_button_container {
+      display: flex;
+    }
+    .select{
+      width: 50%;
+    }
+    .nav{
+      display: none;
+    }
+    .right{
+      width: 15%;
+      &.active{
+        width: 15%;
+      }
+    }
+    .modal.active{
+     opacity: 1;
+     height: 50vh; 
+    }
+    
+  
+    .menu {
+      display: flex;
+      align-items: center;
+      font-size: medium;
+      width: auto;
+      
+    }
+  
+    #menu_toggle ~ .menu a {
+      height: 0;
+      margin: 0;
+      padding: 0;
+      border: 0;
+      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    }
+  
+    #menu_toggle:checked ~ .menu a {
+      border: 1px solid rgb(251, 247, 247);
+      height: 2.5em;
+      padding: 0.5em;
+      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    }
+  
+    .menu > a {
+      display: flex;
+      justify-content: center;
+      margin: 0;
+      padding: 0.5em 0;
+      width: 100%;
+      color: black;
+      background-color:rgb(255, 255, 255);
+    }
+  
+    .menu > a:not(:last-child) {
+      border-bottom: 1px solid rgb(0, 0, 0);
+    }
+  }
+  @media (max-width: 400px) {
+    
+    .right{
+      width: 20%;
+      &.active{
+        width: 20%;
+      }
+    }
   }
 
-  #menu_toggle:checked ~ .menu li {
-    border: 1px solid rgb(251, 247, 247);
-    height: 2.5em;
-    padding: 0.5em;
-    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-  }
 
-  .menu > li {
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    padding: 0.5em 0;
-    width: 100%;
-    color: black;
-    background-color:rgb(255, 255, 255);
-  }
 
-  .menu > li:not(:last-child) {
-    border-bottom: 1px solid rgb(0, 0, 0);
-  }
-}
 .img{
        img{
          width: 150px;
@@ -150,4 +219,49 @@
        }
    }
    
-   
+   .dropdown{
+    width: 30px;
+    position: relative;
+   background-color: rgb(255, 222, 222 , 0);
+    border-radius: 5px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+  }
+  .dropdown_list.active{
+    opacity: 1;
+    visibility: visible;
+  }
+  .dropdown_select{
+    padding: 1.5em;
+    border-radius: 4px;
+    // background-color: rgb(140, 132, 132);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 10px;
+    cursor: pointer;
+  }
+  .dropdown_list{
+    width: fit-content;
+    border-radius: 4px;
+    background-color: rgba(255, 222, 222, 0);
+    position: absolute;
+    top: 100%;
+    left: -5px;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.2s linear, visibility 0.2s linear;
+    z-index: 5;
+  }
+  .dropdown_list__item{
+    padding: 1em;
+    font-size: 10px;
+    cursor: pointer;
+    ;
+  }
+
+  
