--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -1,3 +1,24 @@
+@media (max-width: 768px) {
+    .global{
+        height: fit-content;
+    }
+    .main {
+        font-size: 14px;
+        max-width: 90%;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 576px) {
+    .global{
+        height: fit-content;
+    }
+    .main {
+        font-size: 14px;
+        max-width: 80%;
+        margin: 0 auto;
+    }
+}
 .global {
     width: 100%;
     display: flex;
