--- a/src/components/jumbotron/Jumbotron.module.scss
+++ b/src/components/jumbotron/Jumbotron.module.scss
@@ -37,26 +37,34 @@
 @media (max-width: 992px) {
     .global {
         max-width: 750px;
-
+        height: fit-content;
+        display: flex;
+        flex-direction: column;
         .right {
+            width: 100%;
+            height: fit-content;
             img {
-                width: 400px;
+                display: none;
             }
         }
 
         .left {
+            width: 100%;
+            height: fit-content;
+            text-align: center;
             .getStartedBtn {
                 padding: 10px 15px;
                 background-color: #f0c351;
-                font-size: 14px;
+                font-size: 18px;
             }
 
             div {
                 p {
-                    font-size: 16px;
+                    font-size: 18px;
                 }
 
                 .textFire {
+                    text-align: center;
                     h1 {
                         font-size: 28px;
                         font-weight: 600;
@@ -70,28 +78,31 @@
 @media(max-width: 768px) {
     .global {
         max-width: 600px;
-
+        height: 40vh;
+        display: flex;
+        flex-direction: column;
         .right {
+            width: 100%;
             img {
-                margin-top: 55px;
-                width: 250px;
+                width: 300px;
             }
         }
 
         .left {
+            width: 100%;
             .getStartedBtn {
-                padding: 8px 10px;
+                padding: 10px 12px;
                 background-color: #f0c351;
-                font-size: 12px;
+                font-size: 16px;
             }
 
             div {
                 p {
-                    font-size: 12px;
+                    font-size: 16px;
                 }
                 .textFire {
                     h1 {
-                        font-size: 22px;
+                        font-size: 26px;
                         font-weight: bold;
                     }
                 }
