--- a/src/pages/registerPage/RegisterPage.module.scss
+++ b/src/pages/registerPage/RegisterPage.module.scss
@@ -6,37 +6,54 @@
     }
 }
 
+.error {
+    border: 1px solid rgb(146, 23, 23);
+    background-color: rgba(246, 89, 89, 0.346);
+    text-align: center;
+    p{
+        padding-top: 5px;
+    }
+}
+
 @media (max-width: 576px) {
     .main {
         font-size: 14px;
         max-width: 80%;
         margin: 0 auto;
-        p{
+
+        p {
             font-size: 10px;
         }
-        .checkbox{
-            span{
+
+        .checkbox {
+            span {
                 font-size: 12px;
             }
         }
-        .createAc{
+
+        .createAc {
             font-size: 12px;
         }
-        .signInBtn{
+
+        .signInBtn {
             padding: 0 10px;
-            span{
+
+            span {
                 font-size: 12px;
             }
         }
-        .spanAccount{
+
+        .spanAccount {
             font-size: 12px;
-            a{
+
+            a {
                 font-size: 12px;
             }
         }
     }
 
 }
+
 .global {
     width: 100%;
     display: flex;
@@ -78,7 +95,8 @@
         color: #8c8c9e;
         margin: 3px 0 0 0;
         width: 100%;
-        input{
+
+        input {
             margin-top: 5px;
         }
     }
@@ -174,6 +192,7 @@
         }
     }
 }
+
 .easy_retro {
     width: 180px;
     height: 40px;
