--- a/src/pages/registerPage/RegisterPage.module.scss
+++ b/src/pages/registerPage/RegisterPage.module.scss
@@ -14,7 +14,9 @@
         padding-top: 5px;
     }
 }
-
+#formErr{
+    color: red;
+}
 @media (max-width: 576px) {
     .main {
         font-size: 14px;
@@ -136,6 +138,16 @@
     font-size: 16px;
     border-radius: 3px;
     cursor: pointer;
+}
+.createAV{
+    width: 100%;
+    background-color: #4077ed6b;
+    color: white;
+    border: none;
+    padding: 7px 15px;
+    margin-bottom: 5px;
+    font-size: 16px;
+    border-radius: 3px;
 }
 
 .createAc:hover {
