--- a/src/pages/registerPage/RegisterPage.module.scss
+++ b/src/pages/registerPage/RegisterPage.module.scss
@@ -15,7 +15,7 @@
     }
 }
 #formErr{
-    color: red;
+    color: rgba(47, 40, 40, 0.633);
 }
 @media (max-width: 576px) {
     .main {
@@ -138,6 +138,7 @@
     font-size: 16px;
     border-radius: 3px;
     cursor: pointer;
+    margin-top: 10px;
 }
 .createAV{
     width: 100%;
@@ -148,6 +149,7 @@
     margin-bottom: 5px;
     font-size: 16px;
     border-radius: 3px;
+    margin-top: 10px;
 }
 
 .createAc:hover {
