--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -151,3 +151,11 @@
         margin-left: 6px;
     }
 }
+.error {
+    border: 1px solid rgb(146, 23, 23);
+    background-color: rgba(246, 89, 89, 0.346);
+    text-align: center;
+    p{
+        padding-top: 5px;
+    }
+}
