--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -89,14 +89,14 @@
 }
 .logBtn {
     width: 100%;
-    background-color: #9eb7ed;
+    background-color: #60b1e397;
     color: white;
     border: none;
     padding: 7px 15px;
     margin-bottom: 5px;
     font-size: 16px;
     border-radius: 3px;
-    cursor: pointer;
+    cursor: none;
 }
 
 .loginBtn:hover {
@@ -107,7 +107,6 @@
     align-items: center;
     justify-content: center;
     margin: 15px;
-    cursor: none;
 }
 .signInBtn {
     width: 100%;
