--- a/src/pages/PasswordResetPage/PasswordResetPage.module.scss
+++ b/src/pages/PasswordResetPage/PasswordResetPage.module.scss
@@ -102,5 +102,22 @@
 .loading{
     color: red;
 }
-
+.error{
+    background-color: rgba(246, 89, 89, 0.346);
+    text-align: center;
+    padding: 6px 0;
+    margin: 15px 0;
+    border-radius: 5px;
+    color: red;
+    font-size: 14px;
+}
+.success{
+    background-color: #dff2bf;
+    text-align: center;
+    padding: 6px 0;
+    margin: 15px 0;
+    border-radius: 5px;
+    color: #270;
+    font-size: 14px;
+}
 
