--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,4 +1,3 @@
-
 .top_nav {
   display: flex;
   flex-direction: row;
@@ -7,22 +6,22 @@
   color: rgb(0, 0, 0);
   height: 10vh;
 }
-.wrapper{
+.wrapper {
   overflow: hidden;
 }
-.right{
+.right {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 40%;
-  &.active{
+  &.active {
     width: 40%;
   }
 }
-.select{
+.select {
   text-transform: uppercase;
 }
-.nav{
+.nav {
   display: flex;
   grid-gap: 10px;
   height: 100%;
@@ -34,18 +33,18 @@
   flex-direction: column;
   height: 0;
   opacity: 0;
-  transition: .3s;
+  transition: 0.3s;
   justify-content: space-evenly;
   position: absolute;
   width: 100%;
   box-shadow: 0px 10px 15px -12px black;
-  a{
+  a {
     text-decoration: none;
     color: black;
   }
 }
 
-.menu{
+.menu {
   display: flex;
   align-items: center;
   height: 100%;
@@ -116,156 +115,143 @@
 }
 
 @media (max-width: 992px) {
- .right{
-  width: 55%;
-  &.active{
-    width: 65%;
+  .right {
+    width: 55%;
+    &.active {
+      width: 65%;
+    }
   }
- }
-  
 }
 
 @media (max-width: 768px) {
-  .menu{
+  .menu {
     font-size: x-small;
-  }  
-  .menu > a{
+  }
+  .menu > a {
     display: flex;
     align-items: center;
   }
-  .right{
+  .right {
     width: 50%;
-    &.active{
+    &.active {
       width: 60%;
     }
   }
- }
+}
 
- @media (max-width: 576px) {
-    .menu_button_container {
-      display: flex;
-    }
-    .select{
-      width: 50%;
-    }
-    .nav{
-      display: none;
-    }
-    .right{
-      width: 15%;
-      &.active{
-        width: 15%;
-      }
-    }
-    .modal.active{
-     opacity: 1;
-     height: 50vh; 
-    }
-    
-  
-    .menu {
-      display: flex;
-      align-items: center;
-      font-size: medium;
-      width: auto;
-      
-    }
-  
-    #menu_toggle ~ .menu a {
-      height: 0;
-      margin: 0;
-      padding: 0;
-      border: 0;
-      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-    }
-  
-    #menu_toggle:checked ~ .menu a {
-      border: 1px solid rgb(251, 247, 247);
-      height: 2.5em;
-      padding: 0.5em;
-      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-    }
-  
-    .menu > a {
-      display: flex;
-      justify-content: center;
-      margin: 0;
-      padding: 0.5em 0;
-      width: 100%;
-      color: black;
-      background-color:rgb(255, 255, 255);
-    }
-  
-    .menu > a:not(:last-child) {
-      border-bottom: 1px solid rgb(0, 0, 0);
-    }
-  }
-  @media (max-width: 400px) {
-    
-    .right{
-      width: 20%;
-      &.active{
-        width: 20%;
-      }
-    }
-    .dropdown_list{
-      left: -20px !important;
-    }
-  }
-
-
-
-.img{
-       img{
-         width: 150px;
-      
-       }
-   }
-   
-   .dropdown{
-    width: 30px;
-    position: relative;
-   background-color: rgb(255, 222, 222 , 0);
-    border-radius: 5px;
-    height: 100%;
+@media (max-width: 576px) {
+  .menu_button_container {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-
   }
-  .dropdown_list.active{
+  .select {
+    width: 50%;
+  }
+  .nav {
+    display: none;
+  }
+  .right {
+    width: 15%;
+    &.active {
+      width: 15%;
+    }
+  }
+  .modal.active {
     opacity: 1;
-    visibility: visible;
-  
+    height: 50vh;
   }
-  .dropdown_select{
-    padding: 1.5em;
-    border-radius: 4px;
-    // background-color: rgb(140, 132, 132);
-    width: 100%;
+
+  .menu {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    font-size: 10px;
-    cursor: pointer;
-  }
-  .dropdown_list{
-    width: fit-content;
-    border-radius: 4px;
-    background-color: rgba(255, 222, 222, 0);
-    position: absolute;
-    top: 100%;
-    left: -5px;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.2s linear, visibility 0.2s linear;
-    z-index: 5;
-  }
-  .dropdown_list__item{
-    padding: 1em;
-    font-size: 10px;
-    cursor: pointer;
-    ;
+    font-size: medium;
+    width: auto;
   }
 
-  
+  #menu_toggle ~ .menu a {
+    height: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+
+  #menu_toggle:checked ~ .menu a {
+    border: 1px solid rgb(251, 247, 247);
+    height: 2.5em;
+    padding: 0.5em;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+
+  .menu > a {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0.5em 0;
+    width: 100%;
+    color: black;
+    background-color: rgb(255, 255, 255);
+  }
+
+  .menu > a:not(:last-child) {
+    border-bottom: 1px solid rgb(0, 0, 0);
+  }
+}
+@media (max-width: 400px) {
+  .right {
+    width: 20%;
+    &.active {
+      width: 20%;
+    }
+  }
+  .dropdown_list {
+    left: -20px !important;
+  }
+}
+
+.img {
+  img {
+    width: 150px;
+  }
+}
+
+.dropdown {
+  width: 30px;
+  position: relative;
+  background-color: rgb(255, 222, 222, 0);
+  border-radius: 5px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.dropdown_list.active {
+  opacity: 1;
+  visibility: visible;
+}
+.dropdown_select {
+  padding: 1.5em;
+  border-radius: 4px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 10px;
+  cursor: pointer;
+}
+.dropdown_list {
+  width: fit-content;
+  border-radius: 4px;
+  background-color: rgba(255, 222, 222, 0);
+  position: absolute;
+  top: 100%;
+  left: -5px;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.2s linear, visibility 0.2s linear;
+  z-index: 5;
+}
+.dropdown_list__item {
+  padding: 1em;
+  font-size: 10px;
+  cursor: pointer;
+}
